k8s/document/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aruba-document
  labels:
    app: aruba-document
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aruba-document
  template:
    metadata:
      labels:
        app: aruba-document
    spec:
      containers:
        - name: aruba-document
          image: aruba-document:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
