k8s/document/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aruba-document
  labels:
    app: aruba-document
spec:
  type: ClusterIP
  selector:
    app: aruba-document
  ports:
    - name: http
      port: 8080
      targetPort: 8080
