k8s/document/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aruba-document-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: api.aruba.com
      http:
        paths:
          - path: /documents
            pathType: Prefix
            backend:
              service:
                name: aruba-document
                port:
                  number: 8080
